--- a/Meter Card and Smart Parking Meter/ViewControllers/Xibs/Views/ParkingInfo/ParkingInfo.xib
+++ b/Meter Card and Smart Parking Meter/ViewControllers/Xibs/Views/ParkingInfo/ParkingInfo.xib
@@ -6,6 +6,7 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
@@ -20,14 +21,8 @@
                 <outlet property="contentView" destination="iN0-l3-epB" id="8df-5p-MuR"/>
                 <outlet property="distanceLabel" destination="D8B-ZZ-XCf" id="vau-Qf-BXE"/>
                 <outlet property="parkingImage" destination="wNh-bE-nus" id="gdF-No-yTd"/>
-                <outlet property="parkingNameLabel" destination="bHS-bX-ZfA" id="k3R-fw-Rjm"/>
                 <outlet property="perHourLabel" destination="6cD-0c-qtn" id="bQ3-oD-d9i"/>
-                <outlet property="rating1" destination="bSf-PN-fja" id="uek-B9-LV6"/>
-                <outlet property="rating2" destination="rV0-9C-zrE" id="SWN-pr-Nkz"/>
-                <outlet property="rating3" destination="4mZ-va-vxN" id="Nji-86-x6X"/>
-                <outlet property="rating4" destination="jqD-G6-5NP" id="74Z-aJ-H90"/>
-                <outlet property="rating5" destination="pQQ-Ye-R6S" id="bHi-UJ-VE2"/>
-                <outlet property="ratingLabel" destination="LlS-jU-4FB" id="hX8-Yg-vV6"/>
+                <outlet property="ratingView" destination="kK7-3r-TYv" id="t5J-mf-Hag"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -56,99 +51,41 @@
                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="9Kl-yF-bEw">
                                     <rect key="frame" x="56" y="0.0" width="250" height="68"/>
                                     <subviews>
-                                        <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" alignment="bottom" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="bSS-Vs-lm9">
-                                            <rect key="frame" x="0.0" y="0.0" width="250" height="15"/>
+                                        <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" alignment="top" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="tus-rg-K1s">
+                                            <rect key="frame" x="0.0" y="0.0" width="250" height="40"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name Parking" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bHS-bX-ZfA">
-                                                    <rect key="frame" x="0.0" y="0.0" width="116" height="15"/>
-                                                    <fontDescription key="fontDescription" name="Montserrat-Regular" family="Montserrat" pointSize="16"/>
-                                                    <color key="textColor" name="000000"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="distance" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="D8B-ZZ-XCf">
-                                                    <rect key="frame" x="198.5" y="0.0" width="51.5" height="15"/>
-                                                    <fontDescription key="fontDescription" name="Montserrat-Regular" family="Montserrat" pointSize="12"/>
-                                                    <color key="textColor" name="000000"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                            </subviews>
-                                        </stackView>
-                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="7" translatesAutoresizingMaskIntoConstraints="NO" id="lwj-Ka-bhR">
-                                            <rect key="frame" x="0.0" y="19" width="250" height="49"/>
-                                            <subviews>
-                                                <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="Iel-Ie-703">
-                                                    <rect key="frame" x="0.0" y="0.0" width="250" height="10"/>
+                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="bez-Ms-FTs">
+                                                    <rect key="frame" x="0.0" y="0.0" width="172.5" height="40"/>
                                                     <subviews>
-                                                        <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="fJI-69-vtn">
-                                                            <rect key="frame" x="0.0" y="0.0" width="66" height="10"/>
-                                                            <subviews>
-                                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bSf-PN-fja">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="10" height="10"/>
-                                                                    <color key="backgroundColor" name="3FBF66"/>
-                                                                    <constraints>
-                                                                        <constraint firstAttribute="width" secondItem="bSf-PN-fja" secondAttribute="height" multiplier="1:1" id="ALl-xN-kIw"/>
-                                                                        <constraint firstAttribute="height" constant="10" id="KIV-ho-KfB"/>
-                                                                    </constraints>
-                                                                    <userDefinedRuntimeAttributes>
-                                                                        <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
-                                                                            <real key="value" value="5"/>
-                                                                        </userDefinedRuntimeAttribute>
-                                                                    </userDefinedRuntimeAttributes>
-                                                                </view>
-                                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rV0-9C-zrE">
-                                                                    <rect key="frame" x="14" y="0.0" width="10" height="10"/>
-                                                                    <color key="backgroundColor" name="3FBF66"/>
-                                                                    <userDefinedRuntimeAttributes>
-                                                                        <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
-                                                                            <real key="value" value="5"/>
-                                                                        </userDefinedRuntimeAttribute>
-                                                                    </userDefinedRuntimeAttributes>
-                                                                </view>
-                                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4mZ-va-vxN">
-                                                                    <rect key="frame" x="28" y="0.0" width="10" height="10"/>
-                                                                    <color key="backgroundColor" name="3FBF66"/>
-                                                                    <userDefinedRuntimeAttributes>
-                                                                        <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
-                                                                            <real key="value" value="5"/>
-                                                                        </userDefinedRuntimeAttribute>
-                                                                    </userDefinedRuntimeAttributes>
-                                                                </view>
-                                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jqD-G6-5NP">
-                                                                    <rect key="frame" x="42" y="0.0" width="10" height="10"/>
-                                                                    <color key="backgroundColor" name="3FBF66"/>
-                                                                    <userDefinedRuntimeAttributes>
-                                                                        <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
-                                                                            <real key="value" value="5"/>
-                                                                        </userDefinedRuntimeAttribute>
-                                                                    </userDefinedRuntimeAttributes>
-                                                                </view>
-                                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pQQ-Ye-R6S">
-                                                                    <rect key="frame" x="56" y="0.0" width="10" height="10"/>
-                                                                    <color key="backgroundColor" name="3FBF66"/>
-                                                                    <userDefinedRuntimeAttributes>
-                                                                        <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
-                                                                            <real key="value" value="5"/>
-                                                                        </userDefinedRuntimeAttribute>
-                                                                    </userDefinedRuntimeAttributes>
-                                                                </view>
-                                                            </subviews>
-                                                        </stackView>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="4.2/5.0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LlS-jU-4FB">
-                                                            <rect key="frame" x="74" y="0.0" width="176" height="10"/>
-                                                            <fontDescription key="fontDescription" name="Montserrat-Regular" family="Montserrat" pointSize="11"/>
-                                                            <color key="textColor" name="929292"/>
+                                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kK7-3r-TYv" customClass="Rating" customModule="Meter_Card_and_Smart_Parking_Meter" customModuleProvider="target">
+                                                            <rect key="frame" x="0.0" y="0.0" width="172.5" height="40"/>
+                                                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="height" constant="40" id="u59-QN-7T9"/>
+                                                            </constraints>
+                                                        </view>
+                                                    </subviews>
+                                                </stackView>
+                                                <stackView opaque="NO" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="q0m-St-KWW">
+                                                    <rect key="frame" x="198.5" y="0.0" width="51.5" height="20"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="distance" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="D8B-ZZ-XCf">
+                                                            <rect key="frame" x="0.0" y="5" width="51.5" height="15"/>
+                                                            <fontDescription key="fontDescription" name="Montserrat-Regular" family="Montserrat" pointSize="12"/>
+                                                            <color key="textColor" name="000000"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                     </subviews>
+                                                    <directionalEdgeInsets key="directionalLayoutMargins" top="5" leading="0.0" bottom="0.0" trailing="0.0"/>
                                                 </stackView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="address xsdc" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AcV-Tr-cj4">
-                                                    <rect key="frame" x="0.0" y="17" width="250" height="32"/>
-                                                    <fontDescription key="fontDescription" name="Montserrat-Regular" family="Montserrat" pointSize="13"/>
-                                                    <color key="textColor" name="929292"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
                                             </subviews>
                                         </stackView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="address xsdc" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AcV-Tr-cj4">
+                                            <rect key="frame" x="0.0" y="44" width="250" height="24"/>
+                                            <fontDescription key="fontDescription" name="Montserrat-Regular" family="Montserrat" pointSize="13"/>
+                                            <color key="textColor" name="929292"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
                                     </subviews>
                                 </stackView>
                             </subviews>
@@ -208,15 +145,15 @@
         </view>
     </objects>
     <resources>
-        <image name="ic_image" width="335" height="160"/>
+        <image name="ic_image" width="1005" height="480"/>
         <namedColor name="000000">
             <color red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
-        <namedColor name="3FBF66">
-            <color red="0.24705880880355835" green="0.74901962280273438" blue="0.40000003576278687" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="929292">
             <color red="0.57254904508590698" green="0.57254904508590698" blue="0.57254904508590698" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
     </resources>
 </document>
