--- a/Meter Card and Smart Parking Meter/ViewControllers/Xibs/Views/SelectDateOrTime/SelectDateOrTime.xib
+++ b/Meter Card and Smart Parking Meter/ViewControllers/Xibs/Views/SelectDateOrTime/SelectDateOrTime.xib
@@ -19,8 +19,10 @@
             <connections>
                 <outlet property="contentView" destination="iN0-l3-epB" id="tqX-FW-WT9"/>
                 <outlet property="fromImageView" destination="S8d-5V-kRh" id="277-ID-rgl"/>
+                <outlet property="fromLabel" destination="iSx-Dh-WsD" id="ilp-pg-ZxR"/>
                 <outlet property="title" destination="l1z-FW-tw7" id="YDn-Ot-guk"/>
                 <outlet property="toImageView" destination="tSL-YV-aYg" id="kyq-Ex-qRa"/>
+                <outlet property="toLabel" destination="WdI-O4-Y8o" id="Hif-jj-br2"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -43,7 +45,7 @@
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oUf-h6-U4q">
                                     <rect key="frame" x="0.0" y="0.0" width="185.5" height="44"/>
                                     <subviews>
-                                        <stackView opaque="NO" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" distribution="equalSpacing" alignment="center" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="jRm-na-9Go">
+                                        <stackView opaque="NO" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" distribution="equalSpacing" alignment="center" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="jRm-na-9Go">
                                             <rect key="frame" x="0.0" y="0.0" width="185.5" height="44"/>
                                             <subviews>
                                                 <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="qez-Lc-Ec9">
@@ -86,13 +88,25 @@
                                             </subviews>
                                             <directionalEdgeInsets key="directionalLayoutMargins" top="0.0" leading="14" bottom="0.0" trailing="14"/>
                                         </stackView>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Sfu-hT-koZ">
+                                            <rect key="frame" x="0.0" y="0.0" width="185.5" height="44"/>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                            <connections>
+                                                <action selector="FromAction:" destination="-1" eventType="touchUpInside" id="8Ja-LO-GES"/>
+                                            </connections>
+                                        </button>
                                     </subviews>
                                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                     <constraints>
+                                        <constraint firstItem="Sfu-hT-koZ" firstAttribute="top" secondItem="oUf-h6-U4q" secondAttribute="top" id="0Qg-Xf-yhW"/>
                                         <constraint firstItem="jRm-na-9Go" firstAttribute="top" secondItem="oUf-h6-U4q" secondAttribute="top" id="1gu-RE-Z71"/>
                                         <constraint firstAttribute="height" constant="44" id="2zf-Zt-v81"/>
                                         <constraint firstItem="jRm-na-9Go" firstAttribute="leading" secondItem="oUf-h6-U4q" secondAttribute="leading" id="76L-xr-FF9"/>
+                                        <constraint firstAttribute="bottom" secondItem="Sfu-hT-koZ" secondAttribute="bottom" id="NEf-EG-8ko"/>
+                                        <constraint firstItem="Sfu-hT-koZ" firstAttribute="leading" secondItem="oUf-h6-U4q" secondAttribute="leading" id="d1O-rU-m8B"/>
                                         <constraint firstAttribute="trailing" secondItem="jRm-na-9Go" secondAttribute="trailing" id="dyI-fL-dKQ"/>
+                                        <constraint firstAttribute="trailing" secondItem="Sfu-hT-koZ" secondAttribute="trailing" id="jCl-yS-2PP"/>
                                         <constraint firstAttribute="bottom" secondItem="jRm-na-9Go" secondAttribute="bottom" id="l0q-Pt-Egy"/>
                                     </constraints>
                                     <userDefinedRuntimeAttributes>
@@ -109,11 +123,14 @@
                                 </view>
                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_dashedLine" translatesAutoresizingMaskIntoConstraints="NO" id="gPD-bF-WYZ">
                                     <rect key="frame" x="188.5" y="0.0" width="24" height="44"/>
+                                    <constraints>
+                                        <constraint firstAttribute="width" constant="24" id="NiR-04-NrU"/>
+                                    </constraints>
                                 </imageView>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Foo-0n-pLk">
                                     <rect key="frame" x="215.5" y="0.0" width="184.5" height="44"/>
                                     <subviews>
-                                        <stackView opaque="NO" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" distribution="equalSpacing" alignment="center" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="zKg-QL-EEv">
+                                        <stackView opaque="NO" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" distribution="equalSpacing" alignment="center" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="zKg-QL-EEv">
                                             <rect key="frame" x="0.0" y="0.0" width="184.5" height="44"/>
                                             <subviews>
                                                 <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="wIF-L0-XhD">
@@ -152,11 +169,22 @@
                                             </subviews>
                                             <directionalEdgeInsets key="directionalLayoutMargins" top="0.0" leading="14" bottom="0.0" trailing="14"/>
                                         </stackView>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5LZ-VF-R31">
+                                            <rect key="frame" x="0.0" y="0.0" width="184.5" height="44"/>
+                                            <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                            <connections>
+                                                <action selector="toAction:" destination="-1" eventType="touchUpInside" id="MoV-uG-H8D"/>
+                                            </connections>
+                                        </button>
                                     </subviews>
                                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                     <constraints>
                                         <constraint firstItem="zKg-QL-EEv" firstAttribute="top" secondItem="Foo-0n-pLk" secondAttribute="top" id="2nx-wN-qUP"/>
+                                        <constraint firstItem="5LZ-VF-R31" firstAttribute="top" secondItem="Foo-0n-pLk" secondAttribute="top" id="87h-xT-rwk"/>
+                                        <constraint firstItem="5LZ-VF-R31" firstAttribute="leading" secondItem="Foo-0n-pLk" secondAttribute="leading" id="YXk-G8-Zfe"/>
                                         <constraint firstAttribute="bottom" secondItem="zKg-QL-EEv" secondAttribute="bottom" id="Yzb-ph-2nw"/>
+                                        <constraint firstAttribute="bottom" secondItem="5LZ-VF-R31" secondAttribute="bottom" id="arE-Lr-Xfd"/>
+                                        <constraint firstAttribute="trailing" secondItem="5LZ-VF-R31" secondAttribute="trailing" id="eMD-FT-47t"/>
                                         <constraint firstAttribute="height" constant="44" id="wE6-OF-O4E"/>
                                         <constraint firstItem="zKg-QL-EEv" firstAttribute="leading" secondItem="Foo-0n-pLk" secondAttribute="leading" id="x34-Sc-qaj"/>
                                         <constraint firstAttribute="trailing" secondItem="zKg-QL-EEv" secondAttribute="trailing" id="xK3-tU-v5L"/>
