--- a/Meter Card and Smart Parking Meter/Storyboards/User.storyboard
+++ b/Meter Card and Smart Parking Meter/Storyboards/User.storyboard
@@ -173,7 +173,7 @@
         <!--Home-->
         <scene sceneID="LGK-3v-PBL">
             <objects>
-                <viewController storyboardIdentifier="HomeViewController" id="WZA-LM-PB5" customClass="HomeViewController" customModule="Meter_Card_and_Smart_Parking_Meter" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="HomeUserViewController" id="WZA-LM-PB5" customClass="HomeUserViewController" customModule="Meter_Card_and_Smart_Parking_Meter" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="n73-ig-T5n">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -1068,7 +1068,7 @@
                                         <rect key="frame" x="0.0" y="0.0" width="375" height="1096"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="ArE-gy-gEZ">
-                                                <rect key="frame" x="0.0" y="0.0" width="375" height="855"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="375" height="822"/>
                                                 <subviews>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="f8H-Vd-USL">
                                                         <rect key="frame" x="0.0" y="0.0" width="375" height="287"/>
@@ -1107,7 +1107,7 @@
                                                         </constraints>
                                                     </view>
                                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="xeO-XG-V8Q">
-                                                        <rect key="frame" x="0.0" y="287" width="375" height="568"/>
+                                                        <rect key="frame" x="0.0" y="287" width="375" height="535"/>
                                                         <subviews>
                                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_image" translatesAutoresizingMaskIntoConstraints="NO" id="SFi-nI-QUI">
                                                                 <rect key="frame" x="20" y="4" width="335" height="160"/>
@@ -1170,15 +1170,8 @@
                                                                 </subviews>
                                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                             </stackView>
-                                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6MF-Fq-8Tk">
-                                                                <rect key="frame" x="20" y="515" width="335" height="30"/>
-                                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                                <constraints>
-                                                                    <constraint firstAttribute="height" constant="30" id="CZk-Cq-XH1"/>
-                                                                </constraints>
-                                                            </view>
                                                         </subviews>
-                                                        <directionalEdgeInsets key="directionalLayoutMargins" top="4" leading="20" bottom="23" trailing="20"/>
+                                                        <directionalEdgeInsets key="directionalLayoutMargins" top="4" leading="20" bottom="20" trailing="20"/>
                                                     </stackView>
                                                 </subviews>
                                             </stackView>
@@ -1194,14 +1187,24 @@
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Vp1-eW-zED">
                                         <rect key="frame" x="0.0" y="1096" width="375" height="86"/>
                                         <subviews>
-                                            <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="eaR-QM-9xc">
+                                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" alignment="center" spacing="14" translatesAutoresizingMaskIntoConstraints="NO" id="eaR-QM-9xc">
                                                 <rect key="frame" x="0.0" y="0.0" width="375" height="86"/>
                                                 <subviews>
-                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Xn5-mx-5cD" customClass="GreenButton" customModule="Meter_Card_and_Smart_Parking_Meter" customModuleProvider="target">
-                                                        <rect key="frame" x="20" y="5" width="335" height="47"/>
+                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ARo-mh-4eB" customClass="GreenButton" customModule="Meter_Card_and_Smart_Parking_Meter" customModuleProvider="target">
+                                                        <rect key="frame" x="20" y="6" width="160.5" height="45"/>
                                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                         <constraints>
-                                                            <constraint firstAttribute="height" constant="47" id="yjG-uQ-OkT"/>
+                                                            <constraint firstAttribute="height" constant="45" id="MvZ-or-E7J"/>
+                                                        </constraints>
+                                                        <userDefinedRuntimeAttributes>
+                                                            <userDefinedRuntimeAttribute type="string" keyPath="nameButton" value="Reject"/>
+                                                        </userDefinedRuntimeAttributes>
+                                                    </view>
+                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Xn5-mx-5cD" customClass="GreenButton" customModule="Meter_Card_and_Smart_Parking_Meter" customModuleProvider="target">
+                                                        <rect key="frame" x="194.5" y="6" width="160.5" height="45"/>
+                                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="height" constant="45" id="7xu-xn-648"/>
                                                         </constraints>
                                                         <userDefinedRuntimeAttributes>
                                                             <userDefinedRuntimeAttribute type="string" keyPath="nameButton" value="Cancel"/>
@@ -1280,12 +1283,13 @@
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <size key="freeformSize" width="375" height="1270"/>
                     <connections>
-                        <outlet property="greenButton" destination="Xn5-mx-5cD" id="A3U-jG-PDJ"/>
+                        <outlet property="cancelOrAcceptButton" destination="Xn5-mx-5cD" id="pr5-PZ-Ah7"/>
                         <outlet property="mapView" destination="Wod-tU-eqN" id="mCK-cC-FTk"/>
                         <outlet property="numberOfParking" destination="orP-lZ-sSZ" id="MKb-ht-VVo"/>
                         <outlet property="parkingImage" destination="SFi-nI-QUI" id="rrI-GZ-Ax9"/>
                         <outlet property="parkingStatusLabel" destination="9P3-d5-9gK" id="nfv-Xz-oOz"/>
                         <outlet property="ratingView" destination="ajc-uO-Kpo" id="XiG-oO-9cw"/>
+                        <outlet property="rejectButton" destination="ARo-mh-4eB" id="pCa-2G-rjN"/>
                         <outlet property="selectDate" destination="5oy-cg-ZDX" id="HaR-AJ-uxB"/>
                         <outlet property="selectTime" destination="sHd-Ui-SiA" id="qgA-Af-co2"/>
                     </connections>
