--- a/Meter Card and Smart Parking Meter/ViewControllers/Xibs/CollectionCells/Parking/ParkingCollectionViewCell.xib
+++ b/Meter Card and Smart Parking Meter/ViewControllers/Xibs/CollectionCells/Parking/ParkingCollectionViewCell.xib
@@ -2,22 +2,123 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ParkingCollectionViewCell" id="gTV-IL-0wX" customClass="ParkingCollectionViewCell" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+        <collectionViewCell opaque="NO" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ParkingCollectionViewCell" id="gTV-IL-0wX" customClass="ParkingCollectionViewCell" customModule="Meter_Card_and_Smart_Parking_Meter" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="162" height="162"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                <rect key="frame" x="0.0" y="0.0" width="162" height="162"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <subviews>
+                    <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fdD-Tp-nOB">
+                        <rect key="frame" x="0.0" y="0.0" width="162" height="162"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="hU6-7F-laq">
+                                <rect key="frame" x="0.0" y="0.0" width="162" height="162"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="demo" translatesAutoresizingMaskIntoConstraints="NO" id="RpT-xw-O8W">
+                                        <rect key="frame" x="0.0" y="0.0" width="162" height="99"/>
+                                    </imageView>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7Gf-bc-MSV">
+                                        <rect key="frame" x="0.0" y="99" width="162" height="63"/>
+                                        <subviews>
+                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="85P-gD-8Zb">
+                                                <rect key="frame" x="0.0" y="0.0" width="162" height="63"/>
+                                                <subviews>
+                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xm9-68-045" customClass="Rating" customModule="Meter_Card_and_Smart_Parking_Meter" customModuleProvider="target">
+                                                        <rect key="frame" x="14" y="11" width="134" height="37"/>
+                                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                    </view>
+                                                </subviews>
+                                                <directionalEdgeInsets key="directionalLayoutMargins" top="11" leading="14" bottom="15" trailing="14"/>
+                                            </stackView>
+                                        </subviews>
+                                        <color key="backgroundColor" name="FFFFFF"/>
+                                        <constraints>
+                                            <constraint firstAttribute="bottom" secondItem="85P-gD-8Zb" secondAttribute="bottom" id="MfT-fz-V6Q"/>
+                                            <constraint firstItem="85P-gD-8Zb" firstAttribute="top" secondItem="7Gf-bc-MSV" secondAttribute="top" id="S9R-0j-lS1"/>
+                                            <constraint firstAttribute="height" constant="63" id="i2Y-vC-yLU"/>
+                                            <constraint firstItem="85P-gD-8Zb" firstAttribute="leading" secondItem="7Gf-bc-MSV" secondAttribute="leading" id="qHg-PZ-4hB"/>
+                                            <constraint firstAttribute="trailing" secondItem="85P-gD-8Zb" secondAttribute="trailing" id="zDJ-qY-ceD"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="shadowColor">
+                                        <color key="value" red="0.20392156859999999" green="0.78039215689999997" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="size" keyPath="shadowOffset">
+                                        <size key="value" width="0.0" height="0.0"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="hU6-7F-laq" secondAttribute="trailing" id="N9P-tF-Nxi"/>
+                            <constraint firstItem="hU6-7F-laq" firstAttribute="top" secondItem="fdD-Tp-nOB" secondAttribute="top" id="bSY-G4-qkh"/>
+                            <constraint firstItem="hU6-7F-laq" firstAttribute="leading" secondItem="fdD-Tp-nOB" secondAttribute="leading" id="xTz-va-Fzy"/>
+                            <constraint firstAttribute="bottom" secondItem="hU6-7F-laq" secondAttribute="bottom" id="zA1-EY-Xf1"/>
+                        </constraints>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="size" keyPath="shadowOffset">
+                                <size key="value" width="0.0" height="5"/>
+                            </userDefinedRuntimeAttribute>
+                            <userDefinedRuntimeAttribute type="color" keyPath="shadowColor">
+                                <color key="value" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </userDefinedRuntimeAttribute>
+                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                <real key="value" value="2"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
+                    </view>
+                </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+            <constraints>
+                <constraint firstItem="fdD-Tp-nOB" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="XFf-sV-5xe"/>
+                <constraint firstAttribute="trailing" secondItem="fdD-Tp-nOB" secondAttribute="trailing" id="nIL-OY-C65"/>
+                <constraint firstAttribute="bottom" secondItem="fdD-Tp-nOB" secondAttribute="bottom" id="vZR-2q-xDC"/>
+                <constraint firstItem="fdD-Tp-nOB" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="z1s-QC-qfZ"/>
+            </constraints>
+            <userDefinedRuntimeAttributes>
+                <userDefinedRuntimeAttribute type="color" keyPath="shadowColor">
+                    <color key="value" red="0.0" green="0.0" blue="0.0" alpha="0.10000000000000001" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                </userDefinedRuntimeAttribute>
+                <userDefinedRuntimeAttribute type="size" keyPath="shadowOffset">
+                    <size key="value" width="0.0" height="5"/>
+                </userDefinedRuntimeAttribute>
+                <userDefinedRuntimeAttribute type="number" keyPath="shadowRadius">
+                    <real key="value" value="12"/>
+                </userDefinedRuntimeAttribute>
+                <userDefinedRuntimeAttribute type="number" keyPath="shadowOpacity">
+                    <real key="value" value="1"/>
+                </userDefinedRuntimeAttribute>
+            </userDefinedRuntimeAttributes>
+            <connections>
+                <outlet property="parkingImage" destination="RpT-xw-O8W" id="L9b-aa-DWQ"/>
+                <outlet property="ratingView" destination="xm9-68-045" id="MeW-Co-OJc"/>
+            </connections>
             <point key="canvasLocation" x="-358" y="-4"/>
         </collectionViewCell>
     </objects>
+    <resources>
+        <image name="demo" width="1280" height="1280"/>
+        <namedColor name="FFFFFF">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
